# lattice

./: main.py  program.md  pyproject.toml  requirements.txt  run_2x2_pipeline.py  run_4x4_pipeline.py
analysis/: plot_convergence.py  plot_observables.py  tables.py
configs/: 2x2_pipeline.yaml  4x4_pipeline.yaml  default.yaml  smoke_2x2_fixed_u4.yaml  smoke_2x2_ramp_u4.yaml  smoke_vmc.yaml
experiments/: run_experiment.py
models/: __init__.py  base_nqs.py  jepa.py  masking.py  predictors.py  sigreg.py  transformer_nqs.py
physics/: __init__.py  exact_diag.py  hubbard.py  observables.py  sampler.py  symmetry.py  vmc.py
tests/: __init__.py  conftest.py  test_hubbard.py  test_jepa.py  test_nqs.py  test_vmc.py
training/: finetune.py  optimizer.py  pretrain.py
